[package]
name = "s"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tera = "1.20.0"
tokio = { version = "1.39.3", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
clap = { version = "4.5.16", features = ["derive"] }
